# rasp_pi_benchmark

./: CPU.md  GPU.md  Makefile  README.md  Strassen.c  analysis_graphs.py  atlas_mm.c  blis_mm.c  loop_interchange_mm.c  loop_tiling_edge_mm.c  loop_tiling_mm.c  loop_tiling_para_mm.c  mpi_strassen.c  neon.c  neon_strassen.c  openblas_mm.c  opengl_mm_comb.c  openmp.c  openmp_rec_strassen.c  openmp_strassen.c  para_blis_mm.c  para_ind_mm.c  para_openblas_mm.c  para_simple_mm.c  plot_single_thread.py  pthread_neon_strassen.c  relationship.py  result.ipynb  run_all.sh  run_analysis.sh  simple_mm.c  vulkan_mm_comb.c
lib/glad/include/: glad.h
lib/glad/src/: glad.c
results/: blis_doublecheck_results.csv  doublecheck_results.csv  final_results.csv  new_results.csv  newer_results.csv  openblas_results.csv  perf_blis_results.csv  perf_final_results.csv  perf_para_results.csv  perf_results.csv  perf_two_results.csv
src/: GPU.md  Makefile  MatrixMultiplicationShader.glsl  Strassen.c  atlas_mm.c  blis_mm.c  loop_interchange_mm  loop_interchange_mm.c  loop_tiling_mm  loop_tiling_mm.c  mpi_strassen_mm.c  openblas_mm.c  opengl.cpp  openmp_rec_strassen.c  para_blis_mm.c  para_pool_mm.c  para_threads_mm.c  run_opengl.sh  two_th_blis_mm.c  vertex_shader.glsl
vulkan/: CMakeLists.txt  run_vulkan.sh  vulkan_result_tile128  vulkan_result_tile16
vulkan/base/: CMakeLists.txt  VulkanTools.cpp
vulkan/shaders/glsl/matmul/: matmul.comp  matmul.comp.spv
vulkan/src/: CMakeLists.txt
vulkan/src/matmul/: matmul.cpp
